--- a/content/post/2021-12-17-predicting-nba-playoff-berths-fivethirtyeight-vs-betting-markets/index.Rmd
+++ b/content/post/2021-12-17-predicting-nba-playoff-berths-fivethirtyeight-vs-betting-markets/index.Rmd
@@ -24,7 +24,7 @@ In [The Virtues and Vices of Election Prediction Markets](https://fivethirtyeigh
 
 >"The general question of whether FiveThirtyEight ought to be better than prediction and betting markets is an interesting one. I am far from an efficient-market hypothesis purist, but markets are tough to beat in most circumstances. Furthermore, the FiveThirtyEight forecasts are public information, and bettors can use our forecasts along with those of our competitors to calibrate their estimates of the outcomes."
 
-FiveThirtyEight does more with their forecasts than *just* predict outcomes. Their forecasts provide the foundation of their data journalism on trends in sports and politics. We should expect FiveThirtyEight's forecasts to have some tradeoffs between optimizing for performance and being interpretable^[Model based forecasts are also reproducible -- compared to a market based prices which are produced collectively and can't be *reproduced* per se by an individual building a model. FiveThirtyEight's model also has the challenge of trying to be consistent/coherent e.g. make player ratings meaningful and useful in aggregating up to give team ratings.]. Their NBA model is based on a blend of team and individual player performance and is designed with various linear constraints in place that make it explainable to the public (see: [How Our NBA Predictions Work](https://fivethirtyeight.com/methodology/how-our-nba-predictions-work/#:~:text=Game%20predictions&text=For%20a%20given%20lineup%2C%20we,the%20court%20at%20all%20times)). 
+FiveThirtyEight does more with their forecasts than *just* predict outcomes. Their forecasts provide the foundation of their data journalism covering trends in sports and politics. We should expect FiveThirtyEight's forecasts to have some tradeoffs between optimizing for performance and being interpretable^[Model based forecasts are also reproducible -- compared to a market based prices which are produced collectively and can't be *reproduced* per se by an individual building a model. FiveThirtyEight's model also has the challenge of trying to be consistent/coherent e.g. make player ratings meaningful and useful in aggregating up to give team ratings.]. Their NBA model is based on a blend of team and individual player performance and is designed with various linear constraints in place that make it explainable to the public (see: [How Our NBA Predictions Work](https://fivethirtyeight.com/methodology/how-our-nba-predictions-work/#:~:text=Game%20predictions&text=For%20a%20given%20lineup%2C%20we,the%20court%20at%20all%20times)). 
 
 However performance costs shouldn't be *too* high. Afterall, trust in FiveThirtyEight's explanations is in large part dependent on their models' predictive power.
 
@@ -64,7 +64,7 @@ Each season had a consistent URL (with only the season year changing).
 2. For each URL repeat steps 3 to 6
 3. Scrape table containing Teams, betting odds, and outcomes^[Whether team actually made it to playoffs that season]
 4. Convert from payouts to odds (e.g. +400 becomes 0.25)
-5. Tables contain the betting odds of both "making the playoffs" and "missing the playoffs"^[You might expect these to be inverses of one another, but they actually are slightly different -- the difference provides room for The House to make a profit.]. I took the average of the implied odds of making the playoffs between both columns ("make" and "miss"). This might be generous to the betting markets but likely gets at a closer estimate of where the markets actually expect the odds to be.
+5. Tables contain the betting odds of both "making the playoffs" and "missing the playoffs"^[You might expect these to be inverses of one another, but they actually are slightly different -- the difference provides room for The House to make a profit.]. I took the average of the implied odds of making the playoffs between both columns ("make" and inverse of "miss"). This might be generous to the betting markets but likely gets at a closer estimate of where they actually expect the odds to be.
 6. Scrape *date* archived and join to table
 7. Bind data from all scraped pages / seasons together
 8. Convert from odds to probability
@@ -292,7 +292,7 @@ The p-values from the quick t-tests above suggest no statistically significant d
 
 Overall performance may be similar even when individual forecasts are quite different. Circling back to the start of [NBA Playoffs and the Lakers], what got me writing was noticing FiveThirtyEight's divergence from the betting markets in their recent view of the Lakers' playoff chances.
 
-At -460 the markets had an implied probability of the Lakers making the playoffs of ~82%^[Note that I'm just using the line for "make playoffs" in the above analysis I'd taken the average of the odds of "making the playoffs" and the inverse of "missing the playoffs"...]. FiveThirtyEight's forecast of 27% meant a difference of ~55 percentage points (ppt).
+At -460 the markets had an implied probability of the Lakers making the playoffs of ~82%^[Note that I'm just using the line for "make playoffs" in the above analysis I'd taken the average of the odds of "making the playoffs" and the inverse of "missing the playoffs"...]. FiveThirtyEight's forecast of 27% means a difference of ~55 percentage points (ppt)^[If you check today FiveThirtyEight is not quite so down on the Lakers but still are quite a bit compared to the betting markets.].
 
 **Is this difference atypical?**
 
