--- a/content/post/2022-01-18-identifying-r-functions-packages-used-in-github-repos/index.Rmd
+++ b/content/post/2022-01-18-identifying-r-functions-packages-used-in-github-repos/index.Rmd
@@ -30,15 +30,15 @@ I was inspired by a few tweets I saw documenting the methods used in posts by po
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Anyone other <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> people find <a href="https://twitter.com/drob?ref_src=twsrc%5Etfw">@drob</a>&#39;s <a href="https://twitter.com/hashtag/TidyTuesday?src=hash&amp;ref_src=twsrc%5Etfw">#TidyTuesday</a> screencasts useful?<br><br>I made a spreadsheet with timestamps for hundreds of specific tasks he does: <a href="https://t.co/HvJbLk1chd">https://t.co/HvJbLk1chd</a><br> <br>Useful if, like me, you keep going back and ask, &quot;Where in the video did he do [this thing] again?&quot;</p>&mdash; Alex Cookson (@alexcookson) <a href="https://twitter.com/alexcookson/status/1216798492183670784?ref_src=twsrc%5Etfw">January 13, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-As a complement to these resources, I thought it'd be helpful to see precisely which functions and packages were used in each post. See  [Julia Silge Blog] and [David Robinson Tidy Tuesday] for tables containing the unique functions and associated packages used in each of their posts. I also created tables for functions used in the [R for Data Science Chapters] and [Bryan Shalloway Blog].
+As a complement to these resources, I thought it'd be helpful to see precisely which functions and packages were used in each post. See  [Julia Silge Blog] and [David Robinson Tidy Tuesday] for tables containing the unique functions and associated packages used in each of their posts. I also created tables for functions in the [R for Data Science Chapters] and [Bryan Shalloway Blog].
 
-These were made using the [funspotr](https://github.com/brshallo/funspotr) package that provides helpers for identifying R functions & packages used in self-contained R files and associated github repositories.  See funspotr [website](https://brshallo.github.io/funspotr/) for documentation on how to apply funspotr to #rstats file(s) or repos^[funspotr could also be used for R code analysis -- e.g. review most frequent functions, changes in trends, etc.] as well as to see how the package works and current limitations. Message me if you use funspotr or feel free to open an issue if you'd be interested in adding additional [funspotr-examples](https://github.com/brshallo/funspotr-examples) that I can link to!
+These [Examples] were made using the [funspotr](https://github.com/brshallo/funspotr) package that provides helpers for identifying R functions & packages in self-contained R files and associated github repositories.  See funspotr [website](https://brshallo.github.io/funspotr/) for documentation on how to apply funspotr to #rstats file(s) or repos^[funspotr could also be used for R code analysis -- e.g. review most frequent functions, changes in trends, etc.] as well as to see how the package works and current limitations. Message me if you use funspotr or feel free to open an issue if you'd be interested in adding additional [funspotr-examples](https://github.com/brshallo/funspotr-examples) that I can link to!
 
 # Examples
 
-The files in the github repos below were parsed and saved in [funspotr-examples](https://github.com/brshallo/funspotr-examples)^[Parsing all the files takes a few minutes, so was easier to split apart from blog and package.] -- specifically to [data/funs](https://github.com/brshallo/funspotr-examples/tree/main/data/funs)^[See [R/save-examples.R](https://github.com/brshallo/funspotr-examples/blob/main/R/save-examples.R) for code used to parse files -- mostly just used `funspotr::github_spot_funs()`].
+The files in the github repos below were parsed and saved in [funspotr-examples](https://github.com/brshallo/funspotr-examples)^[Parsing all the files takes a few minutes, so was easier to split apart from blog and package.] -- specifically using [R/save-examples.R](https://github.com/brshallo/funspotr-examples/blob/main/R/save-examples.R) to parse each file and record each instance of a function's use to [data/funs](https://github.com/brshallo/funspotr-examples/tree/main/data/funs)^[Mostly just used `funspotr::github_spot_funs()`].
 
-For the examples below I only show the *unique* functions in each post^[Rather than each instance of them as is posted on funspotr-examples] -- except for [R for Data Science Chapters] where I only show the unique functions across the entire book^[Or at least across the files used for documenting the chapters. Showing unique functins across *all files* makes more sense in this case compared to the others because rather than each file being truly self-contained the files together make-up a collective.].
+Below, I only return the first use of a function in each post^[Rather than each instance of them as is posted on funspotr-examples] -- except for [R for Data Science Chapters] where I only show the first use of a function across the entire book^[Or at least across the files used for documenting the chapters. Showing unique functins across *all files* makes more sense in this case compared to the others because rather than each file being truly self-contained the files together make-up a collective.].
 
 ```{r}
 library(dplyr)
